apps/routers/harbor-certmanager/harbor-img-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: img
  namespace: traefik-staging
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host(`img.hephy.pro`, `img-retry.hephy.pro`)
    services:
    - kind: Service
      name: img-public-challenge
      namespace: traefik-staging
      port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: img
  namespace: traefik-staging
spec:
  entryPoints:
    - websecure
  routes:
  - match: HostSNI(`img.hephy.pro`, `img-retry.hephy.pro`)
    services:
    - name: img-nginx-backend
      namespace: traefik-staging
      port: 443
  tls:
    passthrough: true
